<resources>
    <string name="app_name">Intelligently collect</string>
    <string name="login_btn_text">Sign In</string>
    <string name="login_text_hint_username">Please enter the username</string>
    <string name="login_text_hint_password">Please input a password</string>
    <string name="progress_dialog_title">Progress Dialog</string>
    <string name="progress_please_wait">Please wait…</string>
    <string name="title_login">登陆模块</string>
    <string name="login">登陆</string>
    <string name="login_dec">登陆描述</string>
    <string name="notifyTitle">提示</string>
    <string name="notifyMsg">当前应用缺少必要权限。\n\n请点击\"设置\"-\"权限\"-打开所需权限。</string>
    <string name="setting">设置</string>
    <string name="AC">AC</string>
    <string name="BATTERY">BATTERY</string>
    <string name="BMAppUpdate">应用更新</string>
    <string name="BMBreak_Network">未联网</string>
    <string name="BMDialog_InstallAPK">最新版本已下载，是否安装？</string>
    <string name="BMGprsCondition">（提示：非WIFI环境）</string>
    <string name="BMIgnore">忽略该版</string>
    <string name="BMNewVersion">最新版本:</string>
    <string name="BMNotNow">以后再说</string>
    <string name="BMTargetSize">新版本大小:</string>
    <string name="BMToast_IsUpdating">正在更新中....</string>
    <string name="BMUpdateCheck">v3.1.4Beta</string>
    <string name="BMUpdateContent">更新内容</string>
    <string name="BMUpdateNow">立即更新</string>
    <string name="BMUpdateSize">仅需要下载:</string>
    <string name="BMUpdateTitle">发现新版本</string>
    <string name="BSSID">BSSID</string>
    <string name="CHANNEL">CHANNEL</string>
    <string name="CHARGING">CHARGING</string>
    <string name="COLD">COLD</string>
    <string name="COMPASS">COMPASS</string>
    <string name="DEAD">DEAD</string>
    <string name="DISCHARGING">DISCHARGING</string>
    <string name="DuplexSpacing">DuplexSpacing:</string>
    <string name="FOLLOW">FOLLOW</string>
    <string name="FREQUENCY">FREQUENCY</string>
    <string name="FULL">FULL</string>
    <string name="GOOD">GOOD</string>
    <string name="MAP">MAP</string>
    <string name="NORMAL">NORMAL</string>
    <string name="NOT_CHARGING">NOT CHARGING</string>
    <string name="NO_DATA">NO DATA</string>
    <string name="NO_NET">NO NET</string>
    <string name="OVERHEAT">OVERHEAT</string>
    <string name="OVER_VOLTAGE">OVER_VOLTAGE</string>
    <string name="RELEASE">RELEASE</string>
    <string name="RSSI">RSSI</string>
    <string name="SAT_MAP">SATELLITE</string>
    <string name="SAT_MAP_NOTICE">SATELLITE MAP</string>
    <string name="SDK_INT">SDK_INT</string>
    <string name="SSID">SSID</string>
    <string name="TIME">TIME</string>
    <string name="UNKNOWN">UNKNOWN</string>
    <string name="UNSPECIFIED_FAILURE">UNSPECIFIED FAILURE</string>
    <string name="USB">USB</string>
    <string name="WIRELESS">WIRELESS</string>
    <string name="a1">Join QQ group 686600841 find holder.</string>
    <string name="a2">Open high accuracy location mode.</string>
    <string name="a3">iOS do not provide these values.</string>
    <string name="a4">Do not lock your Screen!</string>
    <string name="a5">Get Cellular-Pro.</string>
    <string name="a6">"Android 5.0+ support dual sim
Android 7.0+ support EARFCN/BAND
Android 9.0+ support BAND_WIDTH
Part model of HuaWei miss PCI/EARFCN
Part model of HuaWei sinr need plus 10."</string>
    <string name="about">ABOUT</string>
    <string name="about_cellular_z">About Cellular-Z</string>
    <string name="accuracy">ACCURACY(m)</string>
    <string name="address">ADDRESS</string>
    <string name="alert_choose_pic">Please choose your indoor map!</string>
    <string name="alert_gps">GPS DISABLED,SET NOW ?</string>
    <string name="alert_high_accuracy">CELL INFO NEED HIGH ACCURACY LOCATION,SET NOW ?</string>
    <string name="alert_interpolation">Please mark the start and each turn !</string>
    <string name="alert_path_set">Please set your path!</string>
    <string name="alert_path_set_valid">Please set at least 2 points!</string>
    <string name="alert_sensor_init">Click FIX to init !</string>
    <string name="alert_stop">Stop testing?</string>
    <string name="ali_pay">AliPay</string>
    <string name="almanac">Almanac</string>
    <string name="altitude">ALTITUDE(m)</string>
    <string name="apply_7d_try">7 - DAY FREE TRIAL</string>
    <string name="apply_success">APPLY SUCCESS！</string>
    <string name="arfcn_query">ARFCN QUERY</string>
    <string name="arp_scan_begin">LAN SCAN BEGIN！</string>
    <string name="arp_scan_end">LAN SCAN FINISH！</string>
    <string name="azimuth">Azimuth</string>
    <string name="band">BAND:</string>
    <string name="band_width">BAND Width:</string>
    <string name="base">BASE</string>
    <string name="base_data">BASE DATA</string>
    <string name="base_data_load">LOAD BASE DATA</string>
    <string name="base_data_mgr">BASE DATA MANAGER</string>
    <string name="base_file_select">CSV FILE SELECT</string>
    <string name="base_mgr">BASE DATA MANAGE</string>
    <string name="base_query">%s BASE QUERY</string>
    <string name="base_search">BASE SEARCH</string>
    <string name="bases_map">BASE STATION MAP</string>
    <string name="bases_notice">PLZ ZOOM MAP IN TO LOAD BASE DATA</string>
    <string name="basic">BASIC</string>
    <string name="battery">BATTERY</string>
    <string name="battery_capacity">BATTERY CAPACITY</string>
    <string name="bearing">BEARING</string>
    <string name="begin_load">START LOADING</string>
    <string name="bmob_common_action_cancel">取消</string>
    <string name="bmob_common_action_continue">继续</string>
    <string name="bmob_common_action_info_exist">正在下载中.</string>
    <string name="bmob_common_action_pause">暂停</string>
    <string name="bmob_common_download_failed">下载失败</string>
    <string name="bmob_common_download_finish">下载完成，请点击安装</string>
    <string name="bmob_common_download_notification_prefix">正在下载:</string>
    <string name="bmob_common_info_interrupt">下载出错啦，请检查网络后继续。</string>
    <string name="bmob_common_network_break_alert">请连接网络后再尝试！</string>
    <string name="bmob_common_patch_finish">更新完成，请点击安装</string>
    <string name="bmob_common_pause_notification_prefix">暂停:</string>
    <string name="bmob_common_silent_download_finish">新版本已经准备好，请点击安装</string>
    <string name="bmob_common_start_download_notification">正在下载应用</string>
    <string name="bmob_common_start_patch_notification">正在更新安装包</string>
    <string name="board">BOARD</string>
    <string name="bootloader">BOOTLOADER</string>
    <string name="brand">BRAND</string>
    <string name="cancel">CANCEL</string>
    <string name="cell_type">CELL TYPE</string>
    <string name="channel">CHANNEL</string>
    <string name="check_net">CHECK NET PLEASE</string>
    <string name="choose_email_client">Choose Email Client</string>
    <string name="choose_map_app">CHOOSE YOUR MAP APP</string>
    <string name="confirm">OK</string>
    <string name="connected">CONNECTED</string>
    <string name="contact">CONTACT</string>
    <string name="coordinate_type">COORDINATE TYPE</string>
    <string name="copy">Touch content to copy !</string>
    <string name="csv_eci_notice">ECI = 256eNodeB+cellId,ECI FIRST</string>
    <string name="csv_mgr_notice">CLICK + LOAD DATAN CLICK - DELETE DATA</string>
    <string name="csv_notice">PLEASE CHOOSE YOUR CSV DATA FILE</string>
    <string name="data">DATA</string>
    <string name="data_net">DATA NET</string>
    <string name="del_1_hour">DELETE DATA LOADED IN 1H</string>
    <string name="del_all">DELETE ALL DATA</string>
    <string name="del_success">DELETE SUCCESS</string>
    <string name="device">DEVICE</string>
    <string name="device_id">DEVICE ID:</string>
    <string name="device_rank">DEVICE RANK</string>
    <string name="display">DISPLAY</string>
    <string name="distance">DISTANCE</string>
    <string name="earfcn_info">EARFCN INFO</string>
    <string name="earfcn_query">EARFCN QUERY</string>
    <string name="east">E</string>
    <string name="elevation">Elevation</string>
    <string name="ephemeris">Ephemeris</string>
    <string name="exit_notice">CLICK AGAIN TO EXIT</string>
    <string name="expiry_time">EXPIRY:</string>
    <string name="export">Exported to</string>
    <string name="export_data">EXPORT DATA</string>
    <string name="export_fail">EXPORT FAIL !</string>
    <string name="feedback">FEEDBACK &amp; INTERFLOW</string>
    <string name="field_in_csv">FIELD IN CSV:</string>
    <string name="field_we_need">FIELD WE NEED:</string>
    <string name="finish">FINISH</string>
    <string name="fix">FIX</string>
    <string name="frequency_">Frequency:</string>
    <string name="go_on">CONTINUE</string>
    <string name="hardware">HARDWARE</string>
    <string name="health">HEALTH</string>
    <string name="help">QUESTION &amp; ANSWER</string>
    <string name="hotspot_list">HOTSPOT LIST</string>
    <string name="iccid">ICCID</string>
    <string name="iccid_info">ICCID INFO</string>
    <string name="id">ID</string>
    <string name="imei">IMEI</string>
    <string name="imsi">SIM IMSI</string>
    <string name="indoor_coverage">INDOOR COVERAGE TEST</string>
    <string name="indoor_manual">MANUAL</string>
    <string name="indoor_pre_path">PRESET PATH</string>
    <string name="indoor_sensor">SENSOR</string>
    <string name="input_arfcn">INPUT ARFCN HERE</string>
    <string name="input_earfcn">INPUT EARFCN HERE</string>
    <string name="input_notice">INPUT %s PLEASE</string>
    <string name="install_map_app">PLEASE INSTALL MAP APP FIRST!</string>
    <string name="item">ROWS</string>
    <string name="java_vm">JAVA VM</string>
    <string name="join_member_month">JOIN MEMBER/MONTH</string>
    <string name="join_member_season">JOIN MEMBER/SEASON</string>
    <string name="join_member_year">JOIN MEMBER/YEAR</string>
    <string name="kilometer">KM</string>
    <string name="lan_devices">LAN DEVICES</string>
    <string name="latitude">LATITUDE</string>
    <string name="latitude_short">LAT</string>
    <string name="load_item">%d ROWS LOADED</string>
    <string name="loaded_item">%d ROWS IN TOTAL</string>
    <string name="loading_bar_text">请求加载中...</string>
    <string name="location">LOCATION</string>
    <string name="location_type">LOCATION TYPE</string>
    <string name="longitude">LONGITUDE</string>
    <string name="longitude_short">LON</string>
    <string name="manufacturer">MANUFACTURER</string>
    <string name="map_notice">You can check or export signal track in 20 minutes.</string>
    <string name="map_notice_vip">You can check or export signal track in 60 minutes.</string>
    <string name="map_track">MAP &amp; TRACK</string>
    <string name="map_width_step">"WIDTH
## step"</string>
    <string name="mcc">MCC</string>
    <string name="meid">MEID</string>
    <string name="member_id">MEMBER ID:</string>
    <string name="member_month">Cellular-Z VIP(1MONTH)</string>
    <string name="member_rights">MEMBER RIGHTS</string>
    <string name="member_season">Cellular-Z VIP(1SEASON)</string>
    <string name="member_state">MEMBER STATE</string>
    <string name="member_year">Cellular-Z VIP(1YEAR)</string>
    <string name="meter">M</string>
    <string name="mnc">MNC</string>
    <string name="model">MODEL</string>
    <string name="msisdn">MSISDN</string>
    <string name="my_loc">MY LOC:</string>
    <string name="name">Name:</string>
    <string name="navigate">NAVIGATE</string>
    <string name="neighboring_cells">NEIGHBORING CELLS</string>
    <string name="net_operator">NET OPERATOR</string>
    <string name="north">N</string>
    <string name="north_east">NE</string>
    <string name="north_west">NW</string>
    <string name="not_found">NOT FOUND</string>
    <string name="not_use">NoUse</string>
    <string name="system">SYSTEM</string>
    <string name="card_slot">Card Slot</string>
    <string name="network_operator">NetWork Operator</string>
    <string name="service_area">Service Area</string>
    <string name="adjacent_cell">Adjacent Cell</string>
</resources>